<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context="advs.pifatec.ger_hid">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/medicoes"
        android:id="@+id/textView4"
        android:textColor="#000000"
        android:textSize="25dp"
        android:layout_below="@+id/toggleButton"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/L_h"
        android:id="@+id/textView5"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/valv"
        android:id="@+id/textView6"
        android:textColor="#000000"
        android:textSize="25dp"
        android:layout_below="@+id/textView31"
        android:layout_alignParentStart="true"
        android:layout_marginTop="10dp" />

    <ToggleButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New ToggleButton"
        android:id="@+id/toggleButton"
        android:textOn="@string/aberta"
        android:textOff="@string/fechada"
        android:checked="false"
        android:minWidth="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBaseline="@+id/textView6" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="-"
        android:id="@+id/textView7"
        android:layout_alignTop="@+id/textView5"
        android:layout_toEndOf="@+id/textView5"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Inicio"
        android:id="@+id/textView31"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Energia"
        android:id="@+id/textView32"
        android:layout_alignTop="@+id/textView31"
        android:layout_toEndOf="@+id/textView31"
        android:layout_marginLeft="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Luminosidade"
        android:id="@+id/textView33"
        android:layout_alignTop="@+id/textView32"
        android:layout_toStartOf="@+id/textView34"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Hidráulica"
        android:id="@+id/textView34"
        android:layout_marginLeft="0dp"
        android:textColor="#000000"
        android:layout_alignTop="@+id/textView33"
        android:layout_alignEnd="@+id/toggleButton" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView45"
        android:layout_alignTop="@+id/textView31"
        android:layout_alignParentStart="true" />

</RelativeLayout>
