<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".ger_ener">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/medicoes"
        android:id="@+id/txt_med"
        android:textColor="#000000"
        android:textSize="25dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/textView36"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/tensao"
        android:id="@+id/txt_ten"
        android:layout_below="@+id/txt_med"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/corrente"
        android:id="@+id/txt_car"
        android:layout_below="@+id/txt_ten"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/calc"
        android:id="@+id/txt_calc"
        android:layout_below="@+id/txt_car"
        android:layout_alignParentStart="true"
        android:layout_marginTop="32dp"
        android:textSize="25dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/watts"
        android:id="@+id/txt_kw"
        android:layout_below="@+id/txt_calc"
        android:layout_alignParentStart="true"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="-"
        android:id="@+id/textView"
        android:layout_alignTop="@+id/txt_ten"
        android:layout_toEndOf="@+id/txt_ten"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="-"
        android:id="@+id/textView2"
        android:layout_above="@+id/txt_calc"
        android:layout_toEndOf="@+id/txt_car"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="-"
        android:id="@+id/textView3"
        android:layout_marginLeft="10dp"
        android:layout_alignTop="@+id/txt_kw"
        android:layout_toEndOf="@+id/txt_kw"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Inicio"
        android:id="@+id/textView36"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Energia"
        android:id="@+id/textView37"
        android:layout_alignTop="@+id/textView36"
        android:layout_toEndOf="@+id/textView36"
        android:layout_marginLeft="10dp"
        android:textColor="#000000" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Luminosidade"
        android:id="@+id/textView38"
        android:layout_toStartOf="@+id/textView39"
        android:layout_marginRight="10dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Hidráulica"
        android:id="@+id/textView39"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Atualizar"
        android:id="@+id/button"
        android:layout_alignTop="@+id/txt_med"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="Small Text"
        android:id="@+id/textView44"
        android:layout_below="@+id/txt_kw"
        android:layout_alignParentStart="true" />
</RelativeLayout>
